--- a/Blog/src/main/resources/application.properties
+++ b/Blog/src/main/resources/application.properties
@@ -1,22 +1,14 @@
 spring.application.name=Blog
-server.port=1313
+server.port=5000
 
 #MySql database configuration
 
-
-spring.datasource.url=jdbc:mysql://localhost:3306/blog
-spring.datasource.username=root
-spring.datasource.password=vinod123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 
 #Hibernate Configuration
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.show-sql=true
 spring.jpa.properties.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.format_sql=true
-
 
 #File related configuration
 
@@ -29,3 +21,6 @@ project.image=/images
 #Security related configuration
 
 logging.level.org.springframework.security=DEBUG
+
+
+spring.profiles.active=prod
