--- a/Blog/src/main/resources/application.properties
+++ b/Blog/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Hibernate Configuration
 
+spring.jpa.format_sql=true
+spring.jpa.properties.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.dialect=org.hibernate.dialect.MySQL8Dialect
 
@@ -23,4 +25,4 @@ project.image=/images
 logging.level.org.springframework.security=DEBUG
 
 
-spring.profiles.active=prod
+spring.profiles.active=dev
